css/style.css
/* 
Project Name: Blank Template
Client: Your Client
Author: Your Name
Developer @GA in NYC
*/


/******************************************
/* SETUP                   
/*******************************************/

/* Box Model Hack */
* {
     -moz-box-sizing: border-box; /* Firexfox */
     -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
     box-sizing: border-box; /* IE */
}

/* Clear fix hack */
.clearfix:after {
     content: ".";
     display: block;
     clear: both;
     visibility: hidden;
     line-height: 0;
     height: 0;
}

.clear {
	clear: both;
}

.alignright {
	float: right; 
	padding: 0 0 10px 10px; /* note the padding around a right floated image */
}

.alignleft {
	float: left; 
	padding: 0 10px 10px 0; /* note the padding around a left floated image */
}

/******************************************
/* BASE STYLES                   
/*******************************************/

body {
     color: #000;
     font-size: 12px;
     line-height: 1.4;
     font-family: Helvetica, Arial, sans-serif;
}

/******************************************
/* NAV BAR                 
/*******************************************/
    
    nav {
        float: left;
    }


   #nav {
      width: 100%;
      float: left;
      margin: 0 0 3em 0;
      padding: 0;
      list-style: none;
      background-color: #f2f2f2;
      border-bottom: 1px solid #ccc; 
      border-top: 1px solid #ccc; }
   #nav li {
      float: left; }
   #nav li a {
      display: block;
      padding: 8px 15px;
      text-decoration: none;
      font-weight: bold;
      color: #069;
      border-right: 1px solid #ccc; }
   #nav li a:hover {
      color: #c00;
      background-color: #fff; }
   /* End navigation bar styling. */


/*-------------------------------------------
 CONTACT                   
--------------------------------------------*/

#contactcontent {
    width: 960px;
    margin: 0px auto;
    background-color: #333;
    color: #fff;
    font-family: 'Gudea', sans-serif;
    font-size: 2em;
    padding: 8em 2em 10em 2em;
}

#contactcontent input, textarea {
    width: 100%;
    clear: both;
}

/******************************************
/* LAYOUT                   
/*******************************************/

/* Center the container */
#container {
	width: 960px;
	margin: auto;
}

#subheader h2 {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 5em;
    margin: -30px 0px;
    height: 50px;
}

footer {

}

h1 {
    font-family: 'Gudea', sans-serif;
    font-size: 7em;
    font-weight: bold;
    margin: 0px;
}

#description
{
    font-family: 'Josefin Sans', sans-serif;
    font-size: 3em; 
}

/*----------------------------------------------------------------------------- 
   SOCIAL MEDIA  
-----------------------------------------------------------------------------*/



#socialMedia {
    float: right;
}

#socialMedia ul li {
     display:inline-block;
     width:60px;
     height:60px;
     background:blue;   
     text-indent:-9999em;
}

#socialMedia ul li.linkedIn {
    background:url(../images/socialNav.png) 0px 64px;
}
#socialMedia ul li.twitter {
    background:url(../images/socialNav.png) -60px 64px; 
}

#socialMedia ul li.facebook {
    background:url(../images/socialNav.png) -120px 64px; 
}

#socialMedia ul li.rss {
    background:url(../images/socialNav.png) -180px 64px; 
}



#socialMedia ul li.linkedIn:hover {
    background:url(../images/socialNav.png) 0px 0px; 
}

#socialMedia ul li.twitter:hover {
    background:url(../images/socialNav.png) -60px 0px; 
}

#socialMedia ul li.facebook:hover {
    background:url(../images/socialNav.png) -120px 0px; 
}

#socialMedia ul li.rss:hover {
    background:url(../images/socialNav.png) -180px 0px; 
}


/*----------------------------------------------------------
- Navigation Arrows
-----------------------------------------------------------*/



#goleft {
    position: absolute;
    margin: 170px 0px;
     display:inline-block;
     width:40px;
     height:40px;
    background:url(../images/arrows.png) 0px -5px;
}

#goright {
    position: absolute;
     margin: 170px 510px;
     display:inline-block;
     width:40px;
     height:40px;
    background:url(../images/arrows.png) 42px -5px;
    float:right; 
}

#goforward {
     margin: -2px 250px;
     display:inline-block;
     width: 40px;
     height:40px;
     background:url(../images/arrows.png) -5px 46px;
}

#goback {
    position: absolute;
     margin:0px 250px;
     display:inline-block;
     width:40px;
     height:40px;
    background:url(../images/arrows.png) 42px -53px;
    top: 480px;

}


/******************************************
/* ADDITIONAL STYLES                   
/*******************************************/


#thehouse {
    float: left;
    padding: 5px 5px;
}

#abouttext {
    font-size: 15px;
    font-family: 'Josefin Sans', sans-serif;
}

#house {      
     width: 550px;      
     height: 550px;
     margin: 50px 0px; 
}

#housepic {
    margin: 0px auto;
    position: relative;
}

.image1 {
     background: url(../images/1.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center; 
}

.image2 {
     background: url(../images/2.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center; 
}

.image3 {
     background: url(../images/3.jpg) no-repeat;
     width: 550px;
     height: 550px;
    background-position:center; 
}

.image4 {
     background: url(../images/4.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image5 {
     background: url(../images/5.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image6 {
     background: url(../images/6.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image7 {
     background: url(../images/7.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image8 {
     background: url(../images/8.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image9 {
     background: url(../images/9.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image10 {
     background: url(../images/10.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image11 {
     background: url(../images/11.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image12 {
     background: url(../images/12.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image13 {
     background: url(../images/13.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image14 {
     background: url(../images/14.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image15 {
     background: url(../images/15.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image16 {
     background: url(../images/16.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image17 {
     background: url(../images/17.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image18 {
     background: url(../images/18.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image19 {
     background: url(../images/19.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image20 {
     background: url(../images/20.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image21 {
     background: url(../images/21.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image22 {
     background: url(../images/22.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image23 {
     background: url(../images/23.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image24 {
     background: url(../images/24.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image25 {
     background: url(../images/25.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

.image26 {
     background: url(../images/26.jpg) no-repeat;
     width: 550px;
     height: 550px;
     background-position:center;
}

